# ccbt

./: .codecov.yml  .env copy  .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CI_CD_IMPLEMENTATION_PLAN.md  CI_CD_SETUP_STATUS.md  DAEMON_IMPLEMENTATION_ASSESSMENT.md  MIGRATION.md  Makefile  README.md  ccbt.toml  ccbt.toml copy.example  demo_complete_client.py  env.example  mkdocs.yml  pyproject.toml  pytest.ini  ruff-report.json  ruff.toml  run_tests.py  test.torrent  test_diagnosis_runner.py  test_piece_manager_fast.py  test_simple_disk_io.py  test_simple_file_assembler.py  ty.toml  uv.toml
.cursor/plans/: network-disk-optimizations-1658c482.plan.md
.cursor/rules/: bitTorrent-protocols.mdc  cli-interface.mdc  development-patterns.mdc  documentation-standards.mdc  monitoring-observability.mdc  performance-optimization.mdc  project-structure.mdc  security-ml-features.mdc  terminal_dashboard.mdc  testing-patterns.mdc
.github/: README.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  compatibility_issue.md  config.yml  feature_request.md  user_experience.md
.github/workflows/: benchmark.yml  build.yml  ci.yml  compatibility.yml  deploy.yml  docs.yml  lint.yml  pre-release.yml  publish-pypi-dev.yml  publish-pypi.yml  release-to-main.yml  release.yml  security.yml  test.yml  version-check.yml
.hypothesis/constants/: 0130c91ef374d805  015637de71806c0b  0423fa4f6d7c9d2e  08c12fa956dd492a  0d831a2a7e45bd83  13e02c58806d0043  150f255a00711a15  17fe584aa2ed60e3  1edcfbb75b94a3a7  2430d51faa740ccd  26d24f204f18599e  26e7a894e59cda29  2bf871ff2de962e4  2d93c5ab31a8d5ae  2e0b1c573661ea38  3040d4cd1c8120da  32dbfeeaceb4deaf  3498d0fcce062edb  35743d043a1f2dcd  35923b74552fc856  3a35aedb2d9d726e  3fc0b6f25ef16858  4464e650fcf89cef  4713877bc3b5eef0  49bac49c7bb7af63  4a3b9287b5305f16  4adc23db985e0713  4cad4e8089ecec30  51cf96975444a8d0  5b0716d740dd3fc2  5bcbb2fcbfbe1627  613543ef88fc861c  6158d407707d95e0  61ca283fc8cacbdc  61d9d28c39639252  66f2f79702ad9b29  683ccedd1d89e099  6aedc11643493d34  6d4a83a3b6d93f41  719f48b49b1a63d3  (+47 more)
.hypothesis/tmp/: tmp0v1wzjux  tmp24eizsj3  tmp3ad9f7kr  tmp4xdeuz10  tmp69zowqnr  tmp6vfhe53d  tmp8p2_vran  tmp_pm7bs6v  tmpaues1dcy  tmpb00j6yr2  tmpbb1ucnhi  tmpbpxw2mw2  tmpc_nm40ey  tmpcgdq37rl  tmpfhrvp3so  tmpg3ztpb_u  tmpgbi342ek  tmpgyk8n5gw  tmpij1k52q4  tmpjobju7e8  tmpjxrrbos2  tmpkhgwz1kb  tmpl1idhtol  tmpo0569usm  tmpoujgb9je  tmpp1vy4mvq  tmpqjctkmks  tmpr6j2rcy1  tmpr77itney  tmprzyw5zn9  tmpsk1cyjta  tmptomfb09x  tmpvhbadbwl  tmpvnv4vx57  tmpwnp7k5tb  tmpwrlyv_ce  tmpwyetv77i  tmpxpp0804v  tmpz_a247mv  tmpzmzsh49g
benchmarks/: bench_disk.py  bench_hash_verification.py  bench_throughput.py
ccbt/: __init__.py  __main__.py  async_main.py  async_metadata_exchange.py  async_peer_connection.py  async_piece_manager.py  bencode.py  buffers.py  checkpoint.py  config.py  config_backup.py  config_capabilities.py  config_conditional.py  config_diff.py  connection_pool.py  dht.py  disk_io.py  events.py  exceptions.py  file_assembler.py  logging_config.py  magnet.py  metadata_exchange.py  metrics.py  models.py  network_optimizer.py  peer.py  peer_connection.py  pex.py  piece_manager.py  resilience.py  session.py  torrent.py  tracker.py  tracker_server_http.py  tracker_server_udp.py  tracker_udp_client.py
ccbt/cli/: __init__.py  advanced_commands.py  checkpoints.py  config_commands.py  config_commands_extended.py  config_utils.py  console.py  create_torrent.py  daemon_commands.py  diagnostics.py  downloads.py  file_commands.py  filter_commands.py  interactive.py  ipfs_commands.py  main.py  monitoring_commands.py  monitoring_utils.py  nat_commands.py  overrides.py  progress.py  proxy_commands.py  queue_commands.py  resume.py  scrape_commands.py  ssl_commands.py  status.py  task_detector.py  tonic_commands.py  tonic_generator.py  torrent_commands.py  torrent_config_commands.py  utp_commands.py  verbosity.py  xet_commands.py
ccbt/config/: __init__.py  config.py  config_backup.py  config_capabilities.py  config_conditional.py  config_diff.py  config_migration.py  config_schema.py  config_templates.py
ccbt/consensus/: byzantine.py  raft.py  raft_state.py
ccbt/core/: __init__.py  bencode.py  magnet.py  tonic.py  tonic_link.py  torrent.py  torrent_attributes.py  torrent_v2.py
ccbt/daemon/: __init__.py  daemon_manager.py  debug_utils.py  ipc_client.py  ipc_protocol.py  ipc_server.py  main.py  state_manager.py  state_models.py  utils.py
ccbt/discovery/: __init__.py  bloom_filter.py  dht.py  dht_indexing.py  dht_ipv6.py  dht_multiaddr.py  dht_readonly.py  dht_storage.py  distributed_tracker.py  flooding.py  gossip.py  lpd.py  pex.py  tracker.py  tracker_server_http.py  tracker_server_udp.py  tracker_udp_client.py  (+5 more)
dev/: .codecov.yml  CHANGELOG.md  Dockerfile.test  README_PyPI.md  RELEASE_CHECKLIST.md  benchmarks.toml  docker-compose.test.yml  mkdocs.yml  pre-commit-config.yaml  pypi-setup.md  pytest.ini  requirements-rtd.txt  ruff.toml  ty.toml
docs/: API.md  CI_CD.md  CLI_PROTOCOL_VIOLATIONS.md  DASHBOARD_ROADMAP.md  README.md  README_PyPI.md  RELEASE_CHECKLIST.md  architecture.md  bep52.md  bep_xet.md  bitonic.md  btbt-cli.md  checkpoints.md  cli-reference.md  configuration.md  contributing.md  daemon-authentication-verification.md  daemon-cli-authentication-flow.md  daemon-implementation-plan.md  dashboard-guide.md  debugging-daemon-exit.md  getting-started.md  index.md  monitoring.md  performance.md  pypi-setup.md  readthedocs-setup.md  unimplemented-methods.md
scripts/: socket_test.py
tests/: __init__.py  conftest.py  test_async_peer_connection.py  test_basic_imports.py  test_bencode.py  test_checkpoint.py  test_connection_pool.py  test_disk_io.py  test_file_assembler_blocks.py  test_file_assembler_status.py  test_magnet.py  test_parallel_metadata.py  test_peer.py  test_peer_connection.py  test_piece_manager.py  test_rarest_first.py  test_resilience.py  test_resilience_timeout.py  test_session_manager_integration.py  test_simple_functionality.py  test_torrent.py  test_tracker.py  test_tracker_server_http.py
(+1061 files in other folders)
