[build-system]
requires = ["hatchling>=1.8.0"]
build-backend = "hatchling.build"

[project]
name = "ccbt"
version = "0.1.0"
description = "The Easiest , Smallest & Fastest High-performance BitTorrent Client With All The Features"
readme = "docs/README_PyPI.md"
requires-python = ">=3.8"
license = {text = "GPL-2.0"}
authors = [
    {name = "ccBitTorrent Contributors", email = "joseph.pollack@emle.eu"},
]
keywords = ["bittorrent", "p2p", "torrent", "client", "xet" , "ipfs" , "tui" , "textual" , "cli" ]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.25.0",
    "aiofiles>=23.0.0",
    "aiohttp>=3.8.0",
    "toml>=0.10.2",
    "pydantic>=2.0.0",
    "psutil>=5.8.0",
    "pywin32>=305; sys_platform == 'win32'",
    "rich>=14.2.0",
    "click>=8.1.8",
    "msgpack>=1.1.1",
    "textual>=0.73.0",
    "cryptography>=46.0.3",
    "pyyaml>=6.0.3",
    "defusedxml>=0.7.1",
    "aiohttp-socks>=0.10.1",
    "aiortc>=1.9.0",
    "prometheus-client>=0.21.1",
    "av>=12.3.0",
    "netifaces>=0.11.0; platform_system != 'Windows'",
    "liburing>=0.0.1; sys_platform == 'linux'",
    "ipfshttpclient>=0.8.0a2",
    "multiaddr>=0.0.9",
    "multiformats>=0.3.1.post4",
    "blake3>=1.0.8",
    "lz4>=4.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-timeout>=2.4.0",
    "hypothesis>=6.113.0",
    "ruff>=0.14.2",
    "pre-commit>=3.5.0",
    "bandit>=1.7.10",
    "pylint>=3.0.0",
    "safety>=2.0.0",
    "commitizen>=3.0.0",
    "codecov>=2.1.13",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.22",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocstrings[python]>=0.26.1",
    "pymdown-extensions>=10.15",
    "mkdocs-codeinclude-plugin>=0.2.1",
    "ty>=0.0.1a24",
    "textual-dev>=1.6.1",
]
metrics-endpoint = [
]
webrtc = [
]
nat = [
]
proxy = [
]


[project.urls]
Homepage = "https://github.com/ccBittorrent/ccbt"
Repository = "https://github.com/ccBittorrent/ccbt"
Issues = "https://github.com/ccBittorrent/ccbt/issues"
Documentation = "https://ccbittorrent.readthedocs.io/"

[project.scripts]
ccbt = "ccbt.__main__:main"
btbt = "ccbt.cli.main:main"
bitonic = "ccbt.interface.terminal_dashboard:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ccbt*"]

[tool.setuptools.package-data]
ccbt = ["py.typed", "i18n/locales/**/*.mo"]

# Ruff configuration
[tool.ruff]
target-version = "py38"
line-length = 88
exclude = ["tests/", "benchmarks/"]
select = [
    "E4",   # pycodestyle errors
    "E7",   # pycodestyle errors
    "E9",   # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
    "Q",    # flake8-quotes
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle
    "S",    # flake8-bandit
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "DTZ",  # flake8-datetimez
    "EM",   # flake8-errmsg
    "EXE",  # flake8-executable
    "FA",   # flake8-future-annotations
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "G",    # flake8-logging-format
    "INP",  # flake8-no-pep420
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "PYI",  # flake8-pyi
    "PT",   # flake8-pytest-style
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SLF",  # flake8-self
    "SLOT", # flake8-slots
    "INT",  # flake8-gettext
    "PGH",  # pygrep-hooks
    "PL",   # pylint
    "TRY",  # tryceratops
    "FLY",  # flynt
    "NPY",  # numpy
    "AIR",  # airflow
    "PERF", # perflint
    "FURB", # refurb
    "RUF",  # ruff-specific rules
]
ignore = [
    "COM812",  # Conflicts with formatter per warning
    "E501",    # Line too long - ignore for now
    "PLR0912", # Too many branches - complex conditionals are acceptable
    "PLR0915", # Too many statements - large functions are acceptable
    "PLR0911", # Too many returns - complex functions are acceptable
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["TID252"]
"**/scripts/**/*.py" = ["T20"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["ccbt"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 12
max-returns = 6
max-statements = 50

[tool.ruff.lint.pylint.messages-control]
disable = [
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-locals",
    "too-many-statements",
]

# Pytest configuration
# Coverage configuration
[tool.coverage.run]
source = ["ccbt"]
# Use a single data file to avoid corruption from parallel processes
# This prevents "no such table: file" errors from corrupted parallel coverage files
parallel = false
data_file = ".coverage"
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "*/.benchmarks/*",
    "*/.ccbt/*",
    "*/.cursor/*",
    "*/.github/*",
    "*/.hypothesis/*",
    "*/.pre-commit-cache/*",
    "*/.pre-commit-home/*",
    "*/.pytest_cache/*",
    "*/.ruff_cache/*",
    "*/.venv/*",
    "*/benchmarks/*",
    "*/dev/*",
    "*/dist/*",
    "*/docs/*",
    "*/htmlcov/*",
    "*/site/*",
    # Exclude type markers (not executable code)
    "*/py.typed",
    # Exclude root-level wrapper modules (re-export from core)
    "ccbt/bencode.py",  # Wrapper re-exporting from core.bencode
]
# Note: We include __init__.py files as they may contain package initialization logic

[tool.coverage.report]
# Only exclude lines explicitly marked or truly unreachable/testable
exclude_lines = [
    # Lines explicitly marked by developers as not needing coverage
    "pragma: no cover",
    # Unreachable/dead code
    "if 0:",
    # Abstract methods and protocol classes (must be implemented by subclasses)
    "@(abc\\.)?abstractmethod",
    "class .*\\bProtocol\\):",
    # Main entry points (tested via integration, not unit tests)
    "if __name__ == .__main__.:",
]
# DO NOT exclude: raise statements, repr methods, debug checks - these should be tested
precision = 2
show_missing = true
skip_covered = false
skip_empty = false

# Bandit security linter
[tool.bandit]
exclude_dirs = [
    "tests",
    "test_*",
    ".benchmarks",
    ".ccbt",
    ".cursor",
    ".github",
    ".hypothesis",
    ".pre-commit-cache",
    ".pre-commit-home",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "benchmarks",
    "dev",
    "dist",
    "docs",
    "htmlcov",
    "site",
]
skips = ["B101", "B601"]

# Commitizen configuration
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_scheme = "pep440"

# UV workspace configuration (for monorepo support)
[tool.uv.workspace]
members = []

[dependency-groups]
dev = [
    "bandit>=1.7.10",
    "codecov>=2.1.13",
    "commitizen>=3.0.0",
    "coverage[toml]>=7.6.1",
    "hypothesis>=6.113.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.22",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocstrings[python]>=0.26.1",
    "pymdown-extensions>=10.15",
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.4.0",
    "pylint>=3.0.0",
    "ruff>=0.14.2",
    "safety>=2.0.0",
    "textual-dev>=1.6.1",
    "ty>=0.0.1a24",
    "mkdocs-coverage>=1.1.0",
    "mkdocs-codeinclude-plugin>=0.2.1",
    "types-pyyaml>=6.0.12.20241230",
]

 
